HSP3Dish helper、android用の更新
Former-commit-id: bc4f1c9d0932c6cbe2e1e061a727d516880e0d9b

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -31,7 +31,8 @@
 		<li><a href="#DATAFILE">データファイルの準備</a></li>
 		<li><a href="#SYSINFO">システム情報の取得</a></li>
 		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し</a></li>
-		<li><a href="#SCALE">画面サイズのスケーリングについて</a></li>
+		<li><a href="#DISHINI">hsp3dish.ini設定ファイルについて</a></li>
+		<li><a href="#SCALE">マニュアル設定項目について</a></li>
 		<li><a href="#RELEASE">リリースビルド</a></li>
 		<li><a href="#DEVCONTROL">デバイスコントロールについて</a></li>
 		<li><a href="#ADMOB">AdMobによる広告配信</a></li>
@@ -287,10 +288,39 @@
 	「tel:123456789」によりダイアラーを起動します。他にもOSがサポートする様々な呼び出し方法が存在します。
 	</p>
 
-	<h2 id="SCALE">画面サイズのスケーリングについて</h2>
+	<h2 id="DISHINI">hsp3dish.ini設定ファイルについて</h2>
 	<p>
-	最初に作成された解像度と異なるスクリーン上で実行する際に、スケーリング(拡大縮小)を適用することができます。<br>
-	jniフォルダ内のmain.cソースを編集することで、スケーリングに関する設定を行ないます。<br>
+	プロジェクトフォルダ内にある「hsp」フォルダ(HSPスクリプトを設置するフォルダ)に設定ファイル「hsp3dish.ini」がある場合は、その設定がビルド時に反映されます。<br>
+	「hsp3dish.ini」は、Windows上で実行する際に画面サイズなどの設定を参照するためのファイルです。詳しくは、<a href="hsp3dish_prog.htm#INIFILE">HSP3Dishプログラミングマニュアル</a>を参照してください。
+	「パラメーター名=設定値」のように記述することで、androidのビルド時に設定が反映されます。
+	</p>
+	<ul><pre>
+		パラメーター名          設定内容
+		----------------------------------------
+		wx			画面のX(横)サイズ
+		wy			画面のY(縦)サイズ
+		autoscale		自動スケーリング値
+	</pre></ul>
+	<p>
+	画面のスケーリングを自動的に調整したい場合は、「autoscale=0」のように、自動スケーリング値を設定してください。
+	描画した画面サイズを適切に拡大縮小し、現在のスクリーンに表示させることができます。<br>
+	自動スケーリング値の詳細は以下の通りです。
+	</p>
+	<ul><pre>
+		0 : 画面全体に収まる最適な大きさ(縦横比は維持)
+		1 : X方向のサイズを基準に拡大縮小(縦横比は維持)
+		2 : Y方向のサイズを基準に拡大縮小(縦横比は維持)
+		3 : 縦横比は無視して画面全体に表示
+	</pre></ul>
+	<p>
+	「hsp3dish.ini」が存在しない場合や、設定が書かれていない場合は、特に変更は行なわれません。
+	「hsp3dish.ini」ファイルを使用せずに、マニュアルで設定を行なう場合は、「マニュアル設定項目について」の項目をお読み下さい。
+	</p>
+
+	<h2 id="SCALE">マニュアル設定項目について</h2>
+	<p>
+	jniフォルダ内のmain.cソースを編集することで、HSP3Dishに関する各種設定を行ないます。<br>
+	<b>通常は、「hsp」フォルダに設定ファイル「hsp3dish.ini」を用意して設定を行なってください。ここでは、ソースコードを修正して、マニュアルで設定する方法について説明しています。</b><br>
 	「static void engine_handle_cmd」で始まるソースコード(160行付近)にある以下の行を修正します。
 	</p>
 	<ul><pre>
