--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2014(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2015(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>HSP3Dish プログラミングマニュアル・基本仕様ガイド</h1>
 
@@ -35,6 +35,7 @@
 		<li><a href="#INIFILE">起動設定ファイルについて</a></li>
 		<li><a href="#OBAQ">物理エンジンOBAQのサポート</a></li>
 		<li><a href="#EXCHANGE">他プラットフォームへの変換</a></li>
+		<li><a href="#PLUGIN">拡張プラグイン・外部DLLのサポート</a></li>
 		<li><a href="#INPUT">各種入出力への対応について</a></li>
 		<li><a href="#KNOWNBUG">既知の不具合について</a></li>
 		<li><a href="#LICENCE">著作権とライセンス</a></li>
@@ -418,6 +419,7 @@
 	もちろん無償アプリの場合には、ライセンスの取得は必要ありません。
 	</b></p>
 
+
 	<h2 id="EXCHANGE">他プラットフォームへの変換</h2>
 	<p>
 	HSP3Dishでは、他のプラットフォームへの変換をサポートしています。
@@ -435,6 +437,23 @@
 	<p>
 	詳しくは、それぞれのプラットフォームごとに用意されるマニュアルを参照してください。
 	</p>
+
+
+	<h2 id="PLUGIN">拡張プラグイン・外部DLLのサポート</h2>
+	<p>
+	Windows上のHSP3Dishでは、拡張プラグイン及び・外部DLL呼び出しをサポートしています。(COMオブジェクト及びActiveX関連機能はサポートしていません)
+	ただし、HSP3Dishのシステム上、利用できないプラグインも存在するので注意してください。
+	</p>
+	<ul>
+	<li>HSPのウインドウに対して描画を行なうプラグイン(hgimgやhspdxなど)は利用できません</li>
+	<li>HSPの配置オブジェクト(ボタンや入力ボックス)を拡張するプラグインは利用できません</li>
+	<li>その他、HSPのウインドウに関する情報(BMSCR構造体)を参照するプラグインは正常に動作しない可能性があります</li>
+	</ul>
+	<p><b>
+	いずれの場合も、拡張プラグイン・外部DLL呼び出し機能は、Windows上でのみサポートされる機能になりますので、他のプラットフォーム(iOSやandroid、WebGLなど)上には変換されません。</b>
+	HSP3Dishの目的の1つである、マルチプラットフォーム化ができなくなることを理解した上で、利用するようにしてください。
+	</p>
+
 
 	<h2 id="INPUT">各種入出力への対応について</h2>
 	<p>
