HSP3ソースコンバーターで演算の最適化時にスタックに不整合が起こる不具合を修正 スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化 [HSP3Dish][iOS] 64bit環境の実行時にEXC_BAD_ACCESSが発生する不具合を修正 ドキュメントの一部修正
Former-commit-id: 8fa638b57a833079f6993aa513db5a3b1be516e5

--- a/package/win32/doclib/hsp3str.htm
+++ b/package/win32/doclib/hsp3str.htm
@@ -732,7 +732,7 @@ DEF</pre>
 			notemaxとrepeat～loop命令を使うことで、すべての行に対しての処理を効率的に
 			記述できます。たとえば、
 		</p>
-		<pre>    a="ABC\nDEF\GHI"
+		<pre>    a="ABC\nDEF\nGHI"
     notesel a
     repeat notemax
         noteget b,cnt
@@ -751,7 +751,7 @@ DEF</pre>
 			notesave命令は、テキストファイルを保存する場合に使います。
 			たとえば、
 		</p>
-		<pre>    a="ABC\nDEF\GHI"
+		<pre>    a="ABC\nDEF\nGHI"
     notesel a
     notesave "a.txt"</pre>
 		<p>
