複数行文字列から特定の文字列を持つ行を検索するnotefind関数を追加 いくつかのサンプルスクリプトを追加 PNG画像デコーダーstb_imageを2.02に更新
Former-commit-id: 338b54015ac458b82f1db72db0c7becd754d1346

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -15,7 +15,7 @@
 
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</a></p>
+		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.4 / onion software 1997-2015(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>プログラミング・マニュアル</h1>
 
@@ -1999,6 +1999,7 @@ p2=0～65535(0)</pre>
 			<tr><td>noteinfo</td><td>メモリノートパッドに関する情報を取得する</td><td></td></tr>
 			<tr><td>notemax</td><td>全体の行数を取得する</td><td></td></tr>
 			<tr><td>notesize</td><td>全体のサイズ(バイト数)を取得する</td><td></td></tr>
+			<tr><td>notefind</td><td>特定の文字列を含む行を検索する</td><td></td></tr>
 		</table>
 		<p>
 			基本的な使い方は、まずnotesel命令で文字列型の変数を指定します。
