[HSP3Dish][android] beta1でmes命令の後でgcopy命令が正しく表示されない不具合を修正
Former-commit-id: 934506c5afaa7271de40a3cc3631bf00f2a9f5bc

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -634,7 +634,7 @@
 
 	<h2 id="FONTMES">mes,print命令について</h2>
 	<p>
-	現在のバージョンでは、内蔵フォントによるmes及びprint命令の文字列描画に対応しています。<br>
+	内蔵フォントによるmes及びprint命令の文字列描画に対応しています。<br>
 	font命令で指定する、font名は無視され、フォントサイズは反映されます。また、フォントスタイルは標準(0)と太文字(1)にのみ対応しています。<br>
 	android上のフォントを取得する処理は、システムの負担が大きいため一度描画した内容(テクスチャ)はHSP3Dish側でキャッシュすることで高速化する仕組みになっています。
 	通常は、この仕組みについて意識することなく使用することができるはずです。<br>
@@ -667,7 +667,7 @@
 	アルファチャンネルを使用する場合は、PNG形式が推奨されます。
 	<ul>
 	<li>JPEG baseline (プログレッシブJPEGは非サポート)</li>
-	<li>PNG (8bit、24bit、24bit+アルファチャンネル形式に対応)</li>
+	<li>PNG (1bit、2bit、4bit、8bit、24bit、24bit+アルファチャンネル形式に対応)</li>
 	<li>TGA (サブセット)</li>
 	<li>BMP (白黒、RLE圧縮は非サポート)</li>
 	<li>PSD (RGB24bitのみ読み出し)</li>
