HSP3Dish android版の更新
Former-commit-id: 48bfdd1afce062692041df86d06f6c353b052cb9

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -313,6 +313,8 @@
 		3 : 縦横比は無視して画面全体に表示
 	</pre></ul>
 	<p>
+	指定された画面サイズによって、portrait(縦画面)、landscape(横画面)の向きが自動的に設定されます。
+	<br>
 	「hsp3dish.ini」が存在しない場合や、設定が書かれていない場合は、特に変更は行なわれません。
 	「hsp3dish.ini」ファイルを使用せずに、マニュアルで設定を行なう場合は、「マニュアル設定項目について」の項目をお読み下さい。
 	</p>
@@ -689,7 +691,8 @@
 	(通常はそれほど気にする必要はありません。大量の画像を読み込む場合にCPUリソースが余計に必要となります)
 	<br>
 	画像ファイルはプロジェクトディレクトリ内のassetsフォルダに入れることができます。
-	ただし、リソースのサイズ・個数に制限があるため、1MBを越える大きなファイルを多数使用する場合は、data.dpmに含めて使用してください。
+	ただし、古い端末などではリソースのサイズ・個数に制限がある場合があります。
+	1つのファイルが4MBを越えるような大きなファイルを多数使用する場合は、data.dpmに含めて使用することを推奨します。
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
@@ -700,7 +703,9 @@
 	</p>
 	<li>画面の回転について</li>
 	<p>
-	画面の回転については、AndroidManifest.xmlを書き換えて制御することが可能です。
+	現在のバージョンでは、実行中の画面自動回転には対応していません。必ず、縦・横画面を固定して動作する仕様で作成してください。<br>
+	hsp3dish.ini設定ファイルにより、画面サイズが指定されている場合は、自動的に縦画面・横画面の設定が行なわれます。<br>
+	マニュアルで、画面の向き(回転)を設定したい場合は、AndroidManifest.xmlを書き換えて制御することが可能です。
 	</p>
 	<pre>
         &ltactivity android:name="android.app.NativeActivity"
@@ -709,7 +714,6 @@
 	</pre>
 	<p>
 	「android:screenOrientation=」の行で指定されているパラメーターが、"portrait"の場合は縦画面。"landscape"の場合は、横画面にそれぞれ固定されます。
-	現在のバージョンでは、実行中の画面自動回転には対応していません。必ず、縦・横画面を固定して動作する仕様で作成してください。
 	</p>
 	<li>データの保存について</li>
 	<p>
