HSP3Dish android,WebGL版の更新
Former-commit-id: 28df6496c1afd3624b815f3f6d82290fc40119aa

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -356,7 +356,7 @@
 	HSP3Dishでは、簡易的なhttp通信機能を持っています。<br>
 	これにより、web(HTTP)サーバーへのネットワークアクセス及び、データの取得を行なうことができます。
 	あくまでも、基本的なhttp通信機能をサポートするもので、すべてのwebサーバーとの通信を保証するものではありません。<br>
-	<b>現在のバージョン(3.5β2)では、Windowsプラットフォームのみサポートされています。今後のバージョンでは、他のプラットフォームもサポートされる予定です。</b>
+	<b>現在のバージョン(3.5β2)では、Windows,Emscripten(WebGL),androidプラットフォームのみサポートされています。今後のバージョンでは、他のプラットフォームもサポートされる予定です。</b>
 	</p>
 	<pre>
 		httpload (HTTP通信の開始)
