デバッグウインドウのコールスタック表示を追加
Former-commit-id: 0e198bc14b087b6fe5b4ed5b711a555ee6858d9b

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -599,6 +599,9 @@ i>
 			arueさんにHGIMG3、及びドキュメントについて助言を頂きました。また、HSP3スクリプト用アイコン(hspscr_icon)を作成して頂きました。
 		</p>
 		<p>
+			デバッグウインドウのコールスタック表示などは、mjhd_otsukaさんが開発したものを使用させて頂きました。
+		</p>
+		<p>
 			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさんに感謝致します。
 		</p>
 		<p>
@@ -676,6 +679,18 @@ i>
 			<dd>
 				<p>
 		<a href="http://peppermint.jp/" target="_blank">http://peppermint.jp/</a>
+				</p>
+			</dd>
+			<dt>mjhd_otsukaさん</dt>
+			<dd>
+				<p>
+		<a href="https://twitter.com/mjhd_devlion" target="_blank">https://twitter.com/mjhd_devlion</a>
+				</p>
+			</dd>
+			<dt>HSP部屋</dt>
+			<dd>
+				<p>
+		<a href="http://hsproom.me/" target="_blank">http://hsproom.me/</a>
 				</p>
 			</dd>
 		</dl>
