[HSP3Dish][android]JDK7以降での署名に対応
Former-commit-id: be2a8f30e16a24686283f8a8346c83777afc16fe

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -71,8 +71,7 @@
 	</p></ul>
 	<li>JDK(Java Development Kit) → <a href="http://www.oracle.com/technetwork/java/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
-	JDK (Java Development Kit)をインストールしてください。x86(32bit)版のJRE6+JDK6、またはJRE8+JDK8を推奨します。<br>
-	JDK7(ver1.7)は、apkファイルの署名が正しく行なわれないため推奨されません。
+	JDK (Java Development Kit)をインストールしてください。
 	</p></ul>
 	<li>Android NDK（Native Development Kit）開発環境 → <a href="http://developer.android.com/sdk/ndk/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
