[HSP3Dish] 画像コピー時の色乗算値を指定するgmulcolor命令を追加 [HSP3Dish][Windows] mmvol命令による音量が種類によって異なっていたのを修正
Former-commit-id: 032d23028461139839f60f47631957f9f2cf43c2

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -25,6 +25,7 @@
 		<li><a href="#DRAWDIFF">HSP3との差異</a></li>
 		<li><a href="#BUTTON">button命令について</a></li>
 		<li><a href="#GMODE">gmode命令について</a></li>
+		<li><a href="#GMULCOLOR">gmulcolor命令について</a></li>
 		<li><a href="#GFILTER">gfilter命令について</a></li>
 		<li><a href="#SYSREQ">setreq、getreq命令について</a></li>
 		<li><a href="#MTOUCH">マルチタッチ情報の取得について</a></li>
@@ -193,7 +194,7 @@
 	<h2 id="GMODE">gmode命令について</h2>
 	<p>
 	hsp3dishでは、celput、gcopy等の画像コピー命令で、アルファチャンネルを含めた
-	コピーが実行されます。そのため、gmodeによる指定は、いくつか違いが出ます。
+	コピーが実行されます。そのため、gmodeによるコピーモードの指定は、いくつか違いが出ます。
 	</p>
 	<pre>
 	gmode 0,1 : アルファチャンネルなし(無視)
@@ -206,6 +207,26 @@
 	アルファチャンネルは、PNG形式などの画像データに付加される情報です。
 	通常のHSPにあるRGBが0の場合に透過するモードや、特定の色コードを透過するモードは選択できませんので注意してください。<br>
 	<b>現在のバージョンでは、android(NDK)ランタイムにおいてgmode 6(色減算)はサポートされませんのでご注意ください。</b>
+	</p>
+	<p>
+	コピーモード2以上の場合には、画像に対して特定の値を乗算する「テクスチャ乗算」の設定が可能です。
+	詳しくは、「gmulcolor命令について」の項目を参照してください。
+	</p>
+
+	<h2 id="GMULCOLOR">gmulcolor命令について</h2>
+	<p>
+	hsp3dish ver3.5b3から、テクスチャ乗算値の設定を行なうためのgmulcolor命令が追加されています。
+	</p>
+	<pre>
+		gmulcolor p1,p2,p3
+		-----------------------------------------------
+		p1,p2,p3=0～255(255) : 色コード（R,G,Bの輝度）
+	</pre>
+	<p>
+	p1,p2,p3がそれぞれ、R,G,Bの輝度になります。gcopy,celputなどでコピーされる画像に対して、指定したR,G,B値が乗算されます。
+	初期値は、RGBそれぞれ255が指定されています。テクスチャ乗算値を設定することにより、元の画像の色を変化させることができます。
+	画像コピーの際に、gmode命令で指定されるコピーモードが0または1(アルファチャンネルを反映しない)の場合は、テクスチャ乗算値は無効になるので注意してください。
+	また、テクスチャ乗算値は、mes命令による文字の描画には反映されません。また、boxf,line命令など単色の描画には反映されません。
 	</p>
 
 	<h2 id="GFILTER">gfilter命令について</h2>
