--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2015(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2016(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>HSP3Dish android(NDK)版プログラミングガイド</h1>
 
@@ -120,8 +120,8 @@
 	<p>
 	このツールにより、必要なAPIをインストールすることができます。(ネットに接続されている必要があります)
 	<br>
-	「Android 4.4.2 (API 19)」のような形で、それぞれのバージョンに対応したAPIのチェックボックスが表示されます。
-	この中で、「Tools」「Android 4.4.2 (API 19)」はチェックを入れて必ずインストールするようにしてください。
+	「Android 5.0.1 (API 21)」のような形で、それぞれのバージョンに対応したAPIのチェックボックスが表示されます。
+	この中で、「Tools」「Android 5.0.1 (API 21)」はチェックを入れて必ずインストールするようにしてください。
 	それ以外のバージョンは必要に応じてインストールして頂いて構いません。
 	<br>
 	「Install packages...」のボタンを押すことで、ダウンロードとインストールが行なわれます。
@@ -477,10 +477,13 @@
 	<ul>
 	<li>従来のAdMobからの更新について</li><br>
 	<p>
-	HSP3Dish 3.4版までは、従来の(古い)AdMobライブラリを使用していましたが、
+	※HSP3Dish 3.4版までは、従来の(古い)AdMobライブラリを使用していましたが、
 	Googleの更新により、2014/8/1以降は、古いAdMobライブラリを使用したアプリの更新、及び新規追加はできなくなっています。(既に登録されているアプリに影響はありません。)<br>
 	HSP3Dish 3.5版では、Google Play Servicesを使用した新しいAdMobライブラリに切り替えているので、この制限はありません。
 	古いAdMobライブラリを使用するプロジェクトを更新する場合は、新規でプロジェクトを作成し直してください。
+	</p>
+	<p>
+	※最新版のGoogle Play services(Rev.29)では、API21以上のSDKが必要となります。SDKマネージャーから、API21(android 5.0.1)がインストールされているか確認してください。インストールされていない場合は、追加して「AdMobセットアップ」ボタンで再度設定を行なってください。
 	</p>
 	</ul>
 
@@ -510,17 +513,17 @@
 <br><br>
 	4. AdMobのセットアップ
 <br><br>
-	HSP3Dish Helperの、「オプション」タブの「AdMobのセットアップ」ボタンを押して、
+	HSP3Dish Helperの、「オプション」タブの「AdMobセットアップ」ボタンを押して、
 	AdMobビルドのためのファイルを準備してください。
 	この操作は、Google Play Services, Android Support Libraryのダウンロード後に1度行なえば完了します。
 <br><br>
 	5. 最新のAndroid APIライブラリの確認
 <br><br>
 	AdMob SDKをビルドするために、Android APIライブラリの最新版を使用できる状態にする必要があります。
-	"android-19"(Android 4.4.2 (API 19))が利用可能かどうかを確認しておいてください。
+	"android-21"(Android 5.0.1 (API 21))が利用可能かどうかを確認しておいてください。
 <br><br>
 	HSP3Dish helperを起動して、androidタブの「新規プロジェクト」モードの「ID...」ボタンを押すと、
-	インストールされているAPIの一覧が表示されます。この中に、"android-19"が存在してれば問題ありません。
+	インストールされているAPIの一覧が表示されます。この中に、"android-21"が存在してれば問題ありません。
 <br><br>
 	6. AdMobを使用するプロジェクトの作成
 <br><br>
@@ -735,7 +738,7 @@
 	<li>傾きセンサーの入力情報の取得</li>
 	<li>dialog命令によるダイアログ表示サポート</li>
 	<li>各種システム情報取得</li>
-	<li>http接続、ブラウザの呼び出しサポート</li>
+	<li>カメラ、ブラウザの呼び出しサポート</li>
 	<li>HGIMG4のサポート</li>
 	</ul>
 	<p>
